# RayTracer

./: README.md
MiniTrace Source (Experimental)/: MiniTrace.sln
MiniTrace Source (Experimental)/Debug/: MiniTraceOGLWin.ilk
MiniTrace Source (Experimental)/MiniTraceOGLWin/: Box.h  CMakeLists.txt  Camera.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  MiniTraceOGLWin.vcxproj.filters  MiniTraceOGLWinMain.cpp  Notes.txt  OBJFileReader.cpp  OGLWindow.cpp  OGLWindow.h  Ray.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Sphere.cpp  Triangle.cpp  Triangle.h  Vector3.cpp
MiniTrace Source (Experimental)/MiniTraceOGLWin/Debug/: vc120.idb
MiniTrace Source (Experimental)/MiniTraceOGLWin/Debug/MiniTraceOGLWin.tlog/: CL.read.1.tlog  CL.write.1.tlog  MiniTraceOGLWin.lastbuildstate  cl.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
MiniTrace Source (Experimental)/MiniTraceOGLWin/Release/MiniTraceOGLWin.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MiniTrace Source/Debug/: MiniTraceOGLWin.ilk
MiniTrace Source/MiniTraceOGLWin/: Box.cpp  Camera.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MiniTraceOGLWin.vcxproj  MiniTraceOGLWin.vcxproj.filters  OBJFileReader.cpp  OGLApplication.cpp  OGLApplication.h  Plane.cpp  Plane.h  Primitive.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h
Test Project/: Project.sln
Test Project/Debug/: Project.ilk
Test Project/Project/: OBJFileReader.cpp  Project.vcxproj  Source.cpp  (+5 more)
(+29 files in other folders)
